--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<HTML>
-<HEAD></HEAD>
-<BODY>
-	<IMG SRC="준비중.svg">
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html>
+  <body style="width: 100%; max-width: 800px; margin: auto;">
+    <img src="준비중.svg" style="max-width: 100%; height: auto;">
+  </body>
+</html>
